--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "clsx": "^2.1.0",
     "firebase": "^10.9.0",
     "lucide-react": "^0.363.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-hook-form": "^7.51.1",
     "react-router-dom": "^6.22.3",
+    "sqli-react-virtualized-list": "^2.0.0",
     "swiper": "^11.0.7",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
