--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lucide-react": "^0.363.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.51.1",
     "react-router-dom": "^6.22.3",
     "sqli-react-virtualized-list": "^2.0.0",
